# web-img-manager

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  example.html  test.html
.cargo/: config.toml
admin-control-panel/: Cargo.toml  index.html  package.json
admin-control-panel/src/: app.rs  main.rs  utils.rs
admin-control-panel/src/comps/: images.rs  mod.rs  nav_bar.rs  statistics.rs
admin-control-planel/: Cargo.toml  index.html  package-lock.json
admin-control-planel/src/: app.rs  main.rs
bindings/: ConnectEvent.ts  ImageProcessedEvent.ts  UploadRequest.ts
config/: default-server-config.json  server-config.json
examples/plain-js/: index.html  main.js
examples/plain-js/scripts/: main.js  web-img-manager.js
examples/ts-application/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/ts-application/src/: main.ts  rs-bindings.ts  web-img-manager.ts
examples/ts-application/styles/: main.css
src/: api.rs  certificate.rs  check.rs  config.rs  img.rs  main.rs  notifications.rs  permission.rs  services.rs  utils.rs
src/notification/: internal_messages.rs  mod.rs  server.rs
src/public_messages/: api.rs  mod.rs  permission.rs  ws.rs
src/ws/: messages.rs  mod.rs  server.rs
ts-bindings/: README.md  combine-bindings.cjs  package-lock.json  package.json  tsconfig.json
ts-bindings/examples/ts-application/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
ts-bindings/examples/ts-application/src/: main.ts
ts-bindings/examples/ts-application/styles/: main.css  main.scss
ts-bindings/src/: event-emitter.ts  index.ts  notifications.ts  rs-bindings.ts  web-img-manager.ts
