workspace = { members = [
  ".",
  # "admin-control-panel" 
] }

[package]
name = "web-img-manager"
version = "1.3.1"
edition = "2021"
authors = ["Serveny"]
license = "MIT"

[[bin]]
name = "web-img-manager"
path = "src/main.rs"

[features]
default = []
openssl = ["dep:openssl", "actix-web/openssl"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-web = { version = "4.9.0" }
actix-cors = "0.7.0"
sanitize-filename = "0.6.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
base64 = "0.22.1"
image = "0.25.5"
uuid = { version = "1.13.1", features = ["v4", "serde"] }
log = "0.4.25"
env_logger = "0.11.6"
regex = "1.11.1"
rand = "0.9.0"
actix-multipart = "0.7.2"
reqwest = { version = "0.12.12", features = ["json", "multipart"] }
ts-rs = { version = "10.1.0", features = ["serde-compat", "uuid-impl"] }
image_hasher = "3.0.0"
openssl = { version = "0.10.70", features = ["vendored"], optional = true }
tokio = { version = "1.43.0" }
actix-ws = "0.3.0"
futures-util = "0.3.31"
