workspace = { members = [
  ".",
  # "admin-control-panel" 
] }

[package]
name = "web-img-manager"
version = "1.3.1"
edition = "2021"
authors = ["Serveny"]
license = "MIT"

[[bin]]
name = "web-img-manager"
path = "src/main.rs"

[features]
default = []
openssl = ["dep:openssl", "actix-web/openssl"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-web = { version = "4.10.2" }
actix-cors = "0.7.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
base64 = "0.22.1"
image = { version = "0.25.6", features = ["webp"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
log = "0.4.27"
env_logger = "0.11.7"
regex = "1.11.1"
rand = "0.9.0"
actix-multipart = "0.7.2"
reqwest = { version = "0.12.15", features = ["json", "multipart"] }
ts-rs = { version = "10.1.0", features = ["serde-compat", "uuid-impl"] }
image_hasher = "3.0.0"
openssl = { version = "0.10.71", features = ["vendored"], optional = true }
tokio = { version = "1.44.1" }
actix-ws = "0.3.0"
futures-util = "0.3.31"
webp = "0.3"
