workspace = { members = [
  ".",
  # "admin-control-panel" 
] }

[package]
name = "web-img-manager"
version = "1.4.0"
edition = "2021"
authors = ["Serveny"]
license = "MIT"

[[bin]]
name = "web-img-manager"
path = "src/main.rs"

[features]
default = []
openssl = ["dep:openssl", "actix-web/openssl"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-web = { version = "4.11.0" }
actix-cors = "0.7.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
base64 = "0.22.1"
image = { version = "0.25.6", features = ["webp"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
log = "0.4.27"
env_logger = "0.11.8"
regex = "1.11.1"
rand = "0.9.2"
actix-multipart = "0.7.2"
reqwest = { version = "0.12.23", features = ["json", "multipart"] }
ts-rs = { version = "11.0.1", features = ["serde-compat", "uuid-impl"] }
image_hasher = "3.0.0"
openssl = { version = "0.10.73", features = ["vendored"], optional = true }
tokio = { version = "1.47.1" }
actix-ws = "0.3.0"
futures-util = "0.3.31"
webp = "0.3.0"
